--- a/config/database.yml
+++ b/config/database.yml
@@ -2,7 +2,7 @@ development:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: nh_qis
+  database: nh_gis
   pool: 5
   username: root
   password:
@@ -11,7 +11,7 @@ test:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: nh_qis_test
+  database: nh_gis_test
   pool: 5
   username: root
   password:
